--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mimosa-livescript",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://github.com/dbashford/mimosa-livescript",
   "author": "David Bashford",
-  "description": "A LiveScript compiler for Mimosa 2.0+",
+  "description": "A LiveScript compiler for Mimosa",
   "contributors": [
     {
       "name": "David Bashford",
@@ -21,7 +21,7 @@
     "compiler"
   ],
   "dependencies": {
-    "LiveScript": "1.3.0"
+    "LiveScript": "1.3.1"
   },
   "license": "MIT",
   "main": "./src",
