--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "compiler"
   ],
   "dependencies": {
-    "LiveScript": "1.3.1"
+    "livescript": "1.4.0"
   },
   "license": "MIT",
   "main": "./src",
